# candyshop

./: .gitignore  README.md  pyproject.toml
candyshop/: context_processors.py
candyshop/candyshop/: asgi.py  settings.py  urls.py  wsgi.py
candyshop/carrinho/: admin.py  models.py  urls.py  views.py
candyshop/carrinho/migrations/: 0001_initial.py  0002_alter_opcaoentrega_enderecocodigo.py  0003_opcaopagamento.py  0004_pedidos.py  0005_pedidos_cancelado.py
candyshop/carrinho/templates/: carrinho.html  enderecos_entrega.html  pagamento.html  pedidos.html  resumo_compra.html  resumo_pedido.html
candyshop/detalhesproduto/: apps.py  views.py
candyshop/detalhesproduto/templates/: detalhesproduto.html
candyshop/favoritos/: urls.py  views.py
candyshop/favoritos/templates/: favoritos.html
candyshop/home/: admin.py  models.py  urls.py  views.py
candyshop/home/migrations/: 0001_initial.py  0002_alter_produto_produtocodigo.py  0003_favorito.py  0004_imagem_remove_produto_produtoimagem_and_more.py  0005_alter_imagem_img.py  0006_remove_produto_produtoimagem_delete_imagem.py  0007_produto_produtoimagem.py  0008_carrinho.py  0009_remove_produto_produtoimagem_produtoimagem.py  0010_carrinho_ativo.py  0011_remove_carrinho_produtocodigo_and_more.py  0012_alter_produto_produtodescricao.py  0013_alter_produto_produtodescricao.py  0014_alter_produto_produtonome.py
candyshop/home/templates/: home.html
candyshop/login/: backends.py  models.py  urls.py  views.py
candyshop/perfil/: forms.py  models.py  urls.py  views.py
candyshop/templates/: base.html
(+39 files in other folders)
